--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>project_p</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div
+      id="root"
+      class="min-w-screen"
+    ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
